# MinicraftOnline

./: .gitignore  .gitmodules  CMakeLists.txt  config.h
assets/shaders/basic/: basic.fs
assets/shaders/paletted_sprite/: paletted_sprite.fs  paletted_sprite.vs
assets/shaders/sprite/: sprite.fs  sprite.vs
engine/: CMakeLists.txt
engine/include/STB/: stb_image.h
engine/include/engine/: config.h.in  tiles.h
engine/include/engine/core/: log.h
engine/include/engine/ecs/: components.h
engine/include/engine/ecs/systems/: tilemap_system.h
engine/include/engine/renderer/: renderer.h  texture.h
engine/src/: tiles.h
engine/src/core/: application.cpp  application.h  debug.h  entry_point.cpp  gui_application.cpp  layer.cpp  layer.h  layer_stack.cpp  log.cpp  window.cpp  window.h
engine/src/ecs/: components.h  scene.cpp  scene.h
engine/src/ecs/systems/: sprite_system.cpp  system.h  tilemap_system.cpp  tilemap_system.h
engine/src/events/: window_event.h
engine/src/io/: image_loader.h
engine/src/math/: math.cpp
engine/src/renderer/: image.h  material.cpp  renderer.cpp  shader.cpp  texture.h  viewport.h
include/: config.h.in
include/MCO/: image.h  material.h  renderer.h  shader.h  texture.h
include/glad/: glad.h
include/glm/: glm.hpp
mco/: CMakeLists.txt
mco/assets/shaders/basic/: basic.vs
mco/assets/shaders/paletted_sprite/: paletted_sprite.fs
mco/assets/shaders/viewport/: viewport.fs  viewport.vs
mco/include/mco/: config.h.in
mco/src/: game_layer.cpp  game_layer.h  mco_app.cpp  tiles.cpp
mco/src/systems/: player_system.cpp  player_system.h
src/: CMakeLists.txt  common.h  game_layer.cpp  game_layer.h  glad.c  log.cpp  log.h  main.cpp  mco_app.cpp  mco_game.cpp  mco_game.h  tiles.h
src/MCO/: image.cpp  main.cpp  material.cpp  renderer.cpp  shader.cpp  texture.cpp
src/Renderer/: material.h  renderer.cpp  renderer.h  shader.cpp  texture.h
src/base/: CMakeLists.txt
src/base/include/base/: base_game_layer.h  base_game_layer.hpp  components.hpp  network.hpp
src/base/include/base/systems/: player_system.h  player_system.hpp
src/base/src/: CMakeLists.txt  base_game_layer.cpp  config.h.in  game_layer.cpp  mco_app.cpp  tiles.cpp
src/base/src/systems/: player_system.cpp
src/client/: CMakeLists.txt
src/client/src/: CMakeLists.txt  client.cpp  client.h  client.hpp  client_app.cpp  client_game_layer.cpp  client_game_layer.h  client_game_layer.hpp
src/core/: application.cpp  application.h  debug.cpp  entry_point.cpp  gui_application.cpp  gui_application.h  layer.cpp  layer.h  layer_stack.cpp  log.h  window.cpp  window.h
src/ecs/: component_pool.h  components.h  scene.cpp  scene.h
src/ecs/components/: chunk_component.h  component.cpp  component.h  material_component.h  player_component.h  sprite_component.h  tile_component.h  transform_component.h  world_component.h
src/ecs/systems/: player_system.cpp  player_system.h  sprite_animation_system.cpp  sprite_system.h  system.h  tilemap_system.cpp  tilemap_system.h
src/engine/: CMakeLists.txt
src/engine/include/engine/: tiles.hpp
src/engine/include/engine/core/: application.h  application.hpp  common.h  common.hpp  debug.hpp  gui_application.hpp  layer.h  layer.hpp  layer_stack.h  layer_stack.hpp  log.hpp  window.h  window.hpp
src/engine/include/engine/ecs/: component_pool.hpp  components.h  components.hpp  entity.hpp  scene.hpp  scene_view.h  scene_view.hpp
src/engine/include/engine/ecs/systems/: sprite_animation_system.h  sprite_animation_system.hpp  sprite_system.hpp  system.h  system.hpp  tilemap_system.hpp
src/engine/include/engine/events/: event.hpp  network_event.h  network_event.hpp  window_event.h  window_event.hpp
src/engine/include/engine/io/: image_loader.h  image_loader.hpp
src/engine/include/engine/math/: math.hpp
src/engine/include/engine/net/: client.h  client.hpp  connection.hpp  message.h  message.hpp  network_device.h  network_device.hpp  player_id.hpp  player_uid.hpp  server.h  server.hpp
src/engine/include/engine/renderer/: camera.hpp  image.hpp  material.h  material.hpp  renderer.h  renderer.hpp  shader.hpp  texture.h  texture.hpp
src/engine/src/: CMakeLists.txt  config.hpp.in
src/engine/src/core/: CMakeLists.txt  application.cpp  debug.cpp  entry_point.cpp  gui_application.cpp  layer.cpp  layer_stack.cpp  log.cpp  window.cpp
src/engine/src/ecs/: CMakeLists.txt  entity.cpp  scene.cpp
src/engine/src/ecs/systems/: CMakeLists.txt  sprite_animation_system.cpp  sprite_system.cpp  tilemap_system.cpp
src/engine/src/io/: CMakeLists.txt  image_loader.cpp
src/engine/src/math/: CMakeLists.txt  math.cpp
src/engine/src/renderer/: CMakeLists.txt  framebuffer.cpp  framebuffer.h  framebuffer.hpp  material.cpp  renderer.cpp  shader.cpp  texture.cpp  viewport.h  viewport.hpp
src/events/: event.h  window_event.h
src/glad/: glad.c
src/io/: image_loader.cpp  image_loader.h
src/math/: math.cpp  math.h
src/renderer/: colour.h  framebuffer.cpp  framebuffer.h  image.h  material.cpp  material.h  rect.h  renderer.cpp  renderer.h  shader.h  texture.cpp  texture.h
src/server/: CMakeLists.txt
src/server/src/: CMakeLists.txt  server.cpp  server.h  server.hpp  server_app.cpp  server_game_layer.cpp  server_game_layer.h  server_game_layer.hpp
